# Lieutenant-Underwood

./: .gitignore  01-architect-to-builder.md  02-uat5-architect-spec.md  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  docs  pyproject.toml
config/: example.toml
handoff/: FINAL.md  VALIDATION.md
scripts/: install.sh
src/lmstudio_tui/: __init__.py  __main__.py  app.py  config.py  launcher.py  store.py  utils.py
src/lmstudio_tui/api/: client.py
src/lmstudio_tui/cli/: lms_cli.py
src/lmstudio_tui/cpu/: monitor.py
src/lmstudio_tui/gpu/: __init__.py  monitor.py
src/lmstudio_tui/screens/: __init__.py  main_screen.py  model_browser_screen.py  model_detail_screen.py
src/lmstudio_tui/widgets/: __init__.py  ascii_logo.py  chat_panel.py  cpu_panel.py  gpu_panel.py  models_panel.py
tests/: test_api_client.py  test_app.py  test_ascii_logo.py  test_config.py  test_gpu_monitor.py  test_gpu_panel.py  test_lms_cli.py  test_models_panel.py  test_placeholder.py  test_race_condition.py  test_store.py  test_worker_shutdown.py
